--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,13 +16,27 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/ASL2.0'
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation files('libs/commons-codec-1.6.jar')
+    implementation files('libs/commons-logging-1.1.3.jar')
+    implementation files('libs/fluent-hc-4.3.4.jar')
+    implementation files('libs/httpclient-4.3.4.jar')
+    implementation files('libs/httpclient-cache-4.3.4.jar')
+    implementation files('libs/httpcore-4.3.2.jar')
+    implementation files('libs/httpmime-4.3.4.jar')
+    implementation files('libs/jackson-core-asl-1.9.13.jar')
+    implementation files('libs/jackson-mapper-asl-1.9.13.jar')
+    implementation files('libs/json_simple-1.1.jar')
 }
